--- a/.gomarkdoc.yml
+++ b/.gomarkdoc.yml
@@ -4,6 +4,10 @@ includeUnexported: "false"
 header: |+
   # gendb
   Go SQL database utilities leveraging generics.
+  
+  ## Dependencies
+  This uses [genfuncs](https://github.com/nwillc/genfuncs) for some Go generics and functional code.
+
 package: gendb
 repository:
   url: https://github.com/nwillc/genfuncs
